build/log/idf_py_stderr_output_839170
Command: make -j 14 all
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/ledconf.c: In function 'led_init':
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/ledconf.c:66:5: error: 'GPIO' undeclared (first use in this function)
   66 |     GPIO.out_w1tc = (1 << RED) | (1 << IR);   // clear RED and IR
      |     ^~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/ledconf.c:66:5: note: each undeclared identifier is reported only once for each function it appears in
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/ledconf.c: In function 'led_state':
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/ledconf.c:77:5: error: 'GPIO' undeclared (first use in this function)
   77 |     GPIO.out_w1tc = (1 << GREEN) | (1 << IR) | (1 << RED);
      |     ^~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:154: esp-idf/main/CMakeFiles/__idf_main.dir/dvr/ledconf.c.obj] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:6314: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:130: all] Error 2
